src/themes/themes.scss
/**
 * Themes - Styles
 */

.themeable {
  --ac-theme-color: var(--ac-theme-dark);
}

.theme {
  --ac-interactive-color: var(--ac-theme-color);

  color: var(--ac-theme-color);
}

@media (prefers-color-scheme: dark) {
  .bg-background-light {
    --ac-outline-color: var(--ac-background-light);
    --ac-text-color: hsla(var(--ac-background-light-hsl), 0.85);
    --ac-sharp-color: var(--ac-background-light);
    --ac-inverse-color: var(--ac-foreground-base);
    --ac-interactive-color: var(--ac-background-light);
    --ac-muted-color: hsla(var(--ac-background-light-hsl), 0.075);
    --ac-negative-hsl: var(--ac-negative-light-hsl);
    --ac-positive-hsl: var(--ac-positive-light-hsl);
    --ac-theme-color: var(--ac-theme-primary-light);

    background: var(--ac-foreground-base);
  }

  .bg-foreground-base {
    --ac-outline-color: var(--ac-foreground-base);
    --ac-sharp-color: var(--ac-foreground-base);
    --ac-inverse-color: var(--ac-background-light);
    --ac-interactive-color: var(--ac-foreground-base);
    --ac-text-color: hsla(var(--ac-foreground-base-hsl), 0.75);
    --ac-muted-color: hsla(var(--ac-foreground-base-hsl), 0.075);
    --ac-negative-hsl: var(--ac-negative-dark-hsl);
    --ac-positive-hsl: var(--ac-positive-dark-hsl);
    --ac-theme-color: var(--ac-theme-primary-dark);

    background: var(--ac-background-light);
  }

  .themeable {
    --ac-theme-color: var(--ac-theme-light);
  }

  .b-theme {
    border-color: var(--ac-foreground-base);
  }
}

